--- a/main.ipynb
+++ b/main.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
     "    video_path = input(\"Enter the path to the video file for inference: \").strip()\n",
     "    \n",
     "    # Load the model\n",
-    "    model_path = r\"D:\\MAPUA\\CNN_GRU_usingRGBOF\\CNNGRU_model_Date_Time2025_02_23__13_10_35_Loss_0.14990949630737305__Accuracy_0.9701492786407471.h5\"\n",
+    "    model_path = r\"D:\\MAPUA\\CNN_GRU_VarietyofOF\\CNNGRU_model_Date_Time2025_02_23__13_10_35_Loss_0.14990949630737305__Accuracy_0.9701492786407471.h5\"\n",
     "    late_fusion_model = tf.keras.models.load_model(model_path)\n",
     "    print(f\"Loaded model from {model_path}\")\n",
     "    \n",
