updated parameters for farneback image height and width

--- a/main.ipynb
+++ b/main.ipynb
@@ -449,7 +449,7 @@
     "\n",
     "    return flow_visualization\n",
     "\n",
-    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, IMAGE_HEIGHT, IMAGE_WIDTH):\n",
+    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH):\n",
     "    \"\"\"\n",
     "    Extracts optical flow visualizations from a video using Farneback method.\n",
     "    \n",
@@ -490,8 +490,8 @@
     "            break\n",
     "\n",
     "        # Resize frames\n",
-    "        prev_frame_resized = cv2.resize(prev_frame, (IMAGE_WIDTH, IMAGE_HEIGHT))\n",
-    "        next_frame_resized = cv2.resize(next_frame, (IMAGE_WIDTH, IMAGE_HEIGHT))\n",
+    "        prev_frame_resized = cv2.resize(prev_frame, (OF_IMAGE_WIDTH, OF_IMAGE_HEIGHT))\n",
+    "        next_frame_resized = cv2.resize(next_frame, (OF_IMAGE_WIDTH, OF_IMAGE_HEIGHT))\n",
     "\n",
     "        # Compute optical flow visualization\n",
     "        flow_vis = compute_farneback_flow(prev_frame_resized, next_frame_resized)\n",
@@ -504,7 +504,7 @@
     "\n",
     "    # Pad with zero frames if necessary\n",
     "    while len(frames_list) < SEQUENCE_LENGTH:\n",
-    "        frames_list.append(np.zeros((IMAGE_HEIGHT, IMAGE_WIDTH, 3), dtype=np.uint8))\n",
+    "        frames_list.append(np.zeros((OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH, 3), dtype=np.uint8))\n",
     "\n",
     "    # Truncate if we have too many frames\n",
     "    if len(frames_list) > SEQUENCE_LENGTH:\n",
