added lucas kanade model creation

--- a/main.ipynb
+++ b/main.ipynb
@@ -399,83 +399,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_farneback_flow(prev_frame, next_frame):\n",
+    "def compute_optical_flow(prev_frame, next_frame):\n",
     "    \"\"\"\n",
-    "    Compute optical flow using the Farneback method between two frames.\n",
+    "    Compute optical flow using the Lucas-Kanade method between two frames.\n",
     "    \n",
     "    Returns:\n",
-    "        flow_visualization: RGB visualization of the optical flow.\n",
+    "        good_old: Array of points from the previous frame.\n",
+    "        good_new: Array of corresponding points from the next frame.\n",
     "    \"\"\"\n",
     "    # Convert frames to grayscale\n",
     "    prev_gray = cv2.cvtColor(prev_frame, cv2.COLOR_BGR2GRAY)\n",
     "    next_gray = cv2.cvtColor(next_frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "    # Apply slight Gaussian blur to reduce noise\n",
-    "    prev_gray = cv2.GaussianBlur(prev_gray, (3, 3), 0)\n",
-    "    next_gray = cv2.GaussianBlur(next_gray, (3, 3), 0)\n",
+    "    # Parameters for Lucas-Kanade optical flow\n",
+    "    lk_params = dict(winSize=(21, 21),\n",
+    "                     maxLevel=3,\n",
+    "                     criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 30, 0.01))\n",
     "\n",
-    "    # Calculate Farneback optical flow\n",
-    "    flow = cv2.calcOpticalFlowFarneback(\n",
-    "        prev_gray,\n",
-    "        next_gray,\n",
-    "        None,\n",
-    "        pyr_scale=0.5,\n",
-    "        levels=3,\n",
-    "        winsize=11,\n",
-    "        iterations=5,\n",
-    "        poly_n=5,\n",
-    "        poly_sigma=1.1,\n",
-    "        flags=0\n",
-    "    )\n",
-    "\n",
-    "    # Convert the flow to polar coordinates\n",
-    "    magnitude, angle = cv2.cartToPolar(flow[..., 0], flow[..., 1])\n",
-    "\n",
-    "    # Create HSV image for flow visualization\n",
-    "    hsv = np.zeros_like(prev_frame)\n",
-    "    hsv[..., 1] = 255  # Full saturation\n",
+    "    # Parameters for Shi-Tomasi corner detection (good features to track)\n",
+    "    feature_params = dict(maxCorners=3000, qualityLevel=0.01, minDistance=0.1)\n",
     "    \n",
-    "    # Angle corresponds to Hue\n",
-    "    hsv[..., 0] = angle * 180 / np.pi / 2\n",
-    "    \n",
-    "    # Magnitude corresponds to Value (brightness)\n",
-    "    magnitude_norm = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "    gamma = 1.2  # Adjust gamma for better visibility\n",
-    "    magnitude_norm = np.power(magnitude_norm/255, gamma) * 255\n",
-    "    hsv[..., 2] = magnitude_norm.astype('uint8')\n",
+    "    # Detect features in the previous frame\n",
+    "    p0 = cv2.goodFeaturesToTrack(prev_gray, mask=None, **feature_params)\n",
+    "    if p0 is None:\n",
+    "        return [], []\n",
     "\n",
-    "    # Convert HSV to BGR for visualization\n",
-    "    flow_visualization = cv2.cvtColor(hsv, cv2.COLOR_HSV2BGR)\n",
+    "    # Calculate optical flow (find corresponding points in the next frame)\n",
+    "    p1, st, err = cv2.calcOpticalFlowPyrLK(prev_gray, next_gray, p0, None, **lk_params)\n",
     "\n",
-    "    return flow_visualization\n",
+    "    # Ensure valid output and select good points based on the status array\n",
+    "    if p1 is not None and st is not None:\n",
+    "        st = st.flatten()\n",
+    "        good_old = p0[st == 1]\n",
+    "        good_new = p1[st == 1]\n",
+    "    else:\n",
+    "        good_old, good_new = [], []\n",
     "\n",
-    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH):\n",
+    "    return good_old, good_new\n",
+    "\n",
+    "def create_mei_mhi(flow, shape, tau=10):\n",
     "    \"\"\"\n",
-    "    Extracts optical flow visualizations from a video using Farneback method.\n",
+    "    Create Motion Energy Image (MEI) and Motion History Image (MHI) from optical flow vectors.\n",
+    "    \n",
+    "    Args:\n",
+    "        flow: Tuple containing (good_old, good_new) points.\n",
+    "        shape: Tuple defining the output image size (height, width).\n",
+    "        tau: Time constant for motion decay in the MHI.\n",
+    "        \n",
+    "    Returns:\n",
+    "        mei: The Motion Energy Image (binary representation of motion).\n",
+    "        mhi: The Motion History Image (captures motion intensity with decay).\n",
+    "    \"\"\"\n",
+    "    # Initialize MEI and MHI as zero arrays\n",
+    "    mei = np.zeros(shape, dtype=np.float32)\n",
+    "    mhi = np.zeros(shape, dtype=np.float32)\n",
+    "\n",
+    "    # Iterate over each pair of corresponding points to draw motion vectors\n",
+    "    for (new, old) in zip(flow[1], flow[0]):\n",
+    "        x1, y1 = new.ravel()\n",
+    "        x2, y2 = old.ravel()\n",
+    "        \n",
+    "        # Draw a line for the motion on the MEI (binary, using a fixed thickness)\n",
+    "        cv2.line(mei, (int(x1), int(y1)), (int(x2), int(y2)), 255, 2)\n",
+    "        \n",
+    "        # Draw the same line on the MHI (this will later be decayed over time)\n",
+    "        cv2.line(mhi, (int(x1), int(y1)), (int(x2), int(y2)), 255, 2)\n",
+    "\n",
+    "    # Apply decay to the MHI (simulate motion fading over time)\n",
+    "    mhi[mhi > 0] -= 255 / tau  \n",
+    "    mhi[mhi < 0] = 0  # Clip negative values to 0\n",
+    "\n",
+    "    return mei, mhi\n",
+    "\n",
+    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, IMAGE_HEIGHT, IMAGE_WIDTH):\n",
+    "    \"\"\"\n",
+    "    Extracts Motion Energy Images (MEI) from a video by computing optical flow between frame pairs.\n",
     "    \n",
     "    Args:\n",
     "        video_path: Path to the video file.\n",
-    "        SEQUENCE_LENGTH: Number of frame pairs to extract.\n",
+    "        SEQUENCE_LENGTH: Number of frame pairs (and thus MEI images) to extract.\n",
     "        IMAGE_HEIGHT: Target height for resizing frames.\n",
     "        IMAGE_WIDTH: Target width for resizing frames.\n",
     "    \n",
     "    Returns:\n",
-    "        A 4D NumPy array of shape (SEQUENCE_LENGTH, IMAGE_HEIGHT, IMAGE_WIDTH, 3)\n",
-    "        containing the RGB optical flow visualizations.\n",
+    "        A 4D NumPy array of shape (SEQUENCE_LENGTH, IMAGE_HEIGHT, IMAGE_WIDTH, 1)\n",
+    "        containing the normalized MEI images.\n",
     "    \"\"\"\n",
-    "    frames_list = []\n",
+    "    frames_list2 = []\n",
     "\n",
     "    # Open the video file\n",
     "    video_reader = cv2.VideoCapture(video_path)\n",
     "    if not video_reader.isOpened():\n",
     "        print(f\"Error: Could not open video {video_path}.\")\n",
-    "        return np.array(frames_list)\n",
+    "        return frames_list2\n",
     "\n",
-    "    # Calculate total frames and skip window\n",
+    "    # Total frames and skip window calculation for even sampling\n",
     "    video_frames_count = int(video_reader.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "    skip_frames_window = max(int(video_frames_count / SEQUENCE_LENGTH), 1)\n",
     "\n",
-    "    # Iterate over frame pairs\n",
+    "    # Iterate over the video using the skip window to select frame pairs\n",
     "    for frame_counter in range(0, video_frames_count - skip_frames_window, skip_frames_window):\n",
     "        # Read the previous frame\n",
     "        video_reader.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
@@ -489,31 +511,45 @@
     "        if not success:\n",
     "            break\n",
     "\n",
-    "        # Resize frames\n",
+    "        # Resize frames to target dimensions. Note: cv2.resize expects (width, height)\n",
     "        prev_frame_resized = cv2.resize(prev_frame, (OF_IMAGE_WIDTH, OF_IMAGE_HEIGHT))\n",
     "        next_frame_resized = cv2.resize(next_frame, (OF_IMAGE_WIDTH, OF_IMAGE_HEIGHT))\n",
     "\n",
-    "        # Compute optical flow visualization\n",
-    "        flow_vis = compute_farneback_flow(prev_frame_resized, next_frame_resized)\n",
+    "        # Compute optical flow between the two frames\n",
+    "        good_old, good_new = compute_optical_flow(prev_frame_resized, next_frame_resized)\n",
     "\n",
-    "        # Append the flow visualization\n",
-    "        frames_list.append(flow_vis)\n",
+    "        # If no valid optical flow vectors were found, skip this pair\n",
+    "        if len(good_old) == 0 or len(good_new) == 0:\n",
+    "            print(f\"Warning: No optical flow vectors found for frames {frame_counter} and {frame_counter + skip_frames_window}.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Create the Motion Energy Image (MEI) from the optical flow vectors\n",
+    "        mei, _ = create_mei_mhi((good_old, good_new), (OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH), tau=10)\n",
+    "\n",
+    "        # Normalize the MEI to 0-255 and convert to an 8-bit image for visualization\n",
+    "        mei_norm = cv2.normalize(mei, None, 0, 255, cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
+    "\n",
+    "        # Expand dimensions to add a channel axis (resulting in shape: H x W x 1)\n",
+    "        mei_norm = np.expand_dims(mei_norm, axis=-1)\n",
+    "\n",
+    "        # Append the normalized MEI image to the list\n",
+    "        frames_list2.append(mei_norm)\n",
     "\n",
     "    # Release the video capture\n",
     "    video_reader.release()\n",
     "\n",
-    "    # Pad with zero frames if necessary\n",
-    "    while len(frames_list) < SEQUENCE_LENGTH:\n",
-    "        frames_list.append(np.zeros((OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH, 3), dtype=np.uint8))\n",
+    "    # If fewer than SEQUENCE_LENGTH frames were extracted, pad with zero-frames\n",
+    "    while len(frames_list2) < SEQUENCE_LENGTH:\n",
+    "        frames_list2.append(np.zeros((OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH, 1), dtype=np.uint8))\n",
     "\n",
-    "    # Truncate if we have too many frames\n",
-    "    if len(frames_list) > SEQUENCE_LENGTH:\n",
-    "        frames_list = frames_list[:SEQUENCE_LENGTH]\n",
+    "    # If more than SEQUENCE_LENGTH frames were collected, truncate the list\n",
+    "    if len(frames_list2) > SEQUENCE_LENGTH:\n",
+    "        frames_list2 = frames_list2[:SEQUENCE_LENGTH]\n",
     "\n",
-    "    # Convert to numpy array\n",
-    "    frames_list = np.stack(frames_list, axis=0)\n",
+    "    # Convert the list of frames to a 4D NumPy array\n",
+    "    frames_list2 = np.stack(frames_list2, axis=0)\n",
     "\n",
-    "    return frames_list"
+    "    return frames_list2"
    ]
   },
   {
