current files for Simple Flow model creation

--- a/main.ipynb
+++ b/main.ipynb
@@ -471,7 +471,7 @@
     "\n",
     "    return mei, mhi\n",
     "\n",
-    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, IMAGE_HEIGHT, IMAGE_WIDTH):\n",
+    "def frames_extraction_OF(video_path, SEQUENCE_LENGTH, OF_IMAGE_HEIGHT, OF_IMAGE_WIDTH):\n",
     "    \"\"\"\n",
     "    Extracts Motion Energy Images (MEI) from a video by computing optical flow between frame pairs.\n",
     "    \n",
